# cram_teaching

./: .gitignore  LICENSE  README.md  README_WSL.md  docker-compose-headless.yml  docker-compose.yml  start.sh  start_demos.sh  start_eurobin.sh  start_lectures.sh
docs/: install_wsl.md
lectures/: init.sh
lectures/demos/: apartment.ipynb  eurobin-demo.ipynb  household.ipynb  pick_and_place_loop.ipynb  popcorn.ipynb  retail.ipynb  simple_pick_place.ipynb  task_tree_export.dot
lectures/fall_school/: 01-Lesson_01_Lisp_Introduction.ipynb  03-Lesson_03_Pick_n_Place.ipynb  README.md
lectures/lab_opening_presentation/: README.md  pick_and_place_loop.ipynb
lectures/popcorn_demo/: popcorn_demo-checkpoint.ipynb  popcorn_demo.ipynb
lectures/robot_programming_with_lisp/: README.md  RPWL_internship_02_Challenge.md  RPWL_internship_03_TF.md  RPWL_internship_2022.md
lectures/robot_programming_with_lisp/01_orc_battle/: orc-battle.ipynb
lectures/robot_programming_with_lisp/02_simple_world/: assignment.ipynb  lecture_2_imperative.ipynb  (+2 more)
lectures/robot_programming_with_lisp/internship_ws/src/turtle_goal_referee/: CMakeLists.txt  turtle-goal-referee.asd
lectures/robot_programming_with_lisp/internship_ws/src/turtle_goal_referee/launch/: referee_broadcaster.launch  referee_with_tf_buffer.launch
lectures/robot_programming_with_lisp/internship_ws/src/turtle_goal_referee/src/: goal-publisher.lisp  rooms.lisp
lectures/tutorials/: 00-Intro_Setup.ipynb  02-Lesson_02_CRAM_Basics.ipynb  03-Lesson_03_Pick_n_Place.ipynb  04-Package-Delivery-Task.ipynb  Appendix.ipynb  README.md
(+62 files in other folders)
